@@ -8,6 +8,9 @@ TODOS
    o    Eventual incorporation of line searches, possibly in a
         separate routine
 
+2012-7-9
+   o    Removed optansout to avoid conflicts with optplus/optimx
+
 2012-5-21
    o	Separation of constrained and unconstrained versions.
 
